--- a/pms/src/main/resources/application.properties
+++ b/pms/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=pms
 spring.jpa.hibernate.ddl-auto=update
 
 #Configuraci\u00f3n de la base de datos:
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1522:xe
 spring.datasource.username=dfs2_pms
 spring.datasource.password=pms_admin
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
@@ -15,3 +15,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
