implementacion Orecle Cloud

--- a/pms/src/main/resources/application.properties
+++ b/pms/src/main/resources/application.properties
@@ -3,11 +3,12 @@ spring.application.name=pms
 #orquestador de la base de datos con el ORM de Hibernate
 spring.jpa.hibernate.ddl-auto=update
 
-#Configuraci\u00f3n de la base de datos:
-spring.datasource.url=jdbc:oracle:thin:@localhost:1522:xe
-spring.datasource.username=dfs2_pms
-spring.datasource.password=pms_admin
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#Configuracion de la base de datos:
+spring.datasource.url=jdbc:oracle:thin:@bdd_high?TNS_ADMIN=/Users/tobal/Desktop/tercerasEvaluaciones/fk/Wallet_BDD
+spring.datasource.username=FullstackBD
+spring.datasource.password=MiClaveBD123
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 server.port=8094
 
 spring.jpa.show-sql=true
